Fixed projects alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2715,9 +2715,8 @@ button:disabled,
     -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    justify-content: space-between;
     postiion: relative;
-    margin: -2.5em 0 0 -2.5em;
+    margin: 0 auto;
 }
 
 .tiles article {
@@ -2875,7 +2874,7 @@ body:not(.is-touch) .tiles article:hover .content {
 }
 
 .tiles article {
-    margin: 20px 0 0 20px;
+    margin: 20px 10px 0 10px;
 }
 
 body.is-preload .tiles article {
@@ -2895,7 +2894,6 @@ body.is-touch .tiles article .content {
 
     .tiles article {
         width: calc(33.33333% - 1.25em);
-        /*margin: 1.25em 0 0 1.25em;*/
     }
 
 }
@@ -2904,7 +2902,6 @@ body.is-touch .tiles article .content {
 
     .tiles article {
         width: calc(50% - 2.5em);
-        /*margin: 2.5em 0 0 2.5em;*/
     }
 
 }
@@ -2913,7 +2910,6 @@ body.is-touch .tiles article .content {
 
     .tiles article {
         width: calc(50% - 1.25em);
-        /*margin: 1.25em 0 0 1.25em;*/
     }
 
     .tiles article:hover > .image {
